[package]
name = "husky"
version = "0.1.0"
authors = ["Lester Covey <me@lestercovey.ml>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.17"
crossterm = "0.22"
unicode-width = "0.1.9"
base64 = "0.13.0"
chrono = "0.4.19"
reqwest = { version = "0.11.10" }
tokio = { version = "1.17.0", features = ["full"] }
tokio-tungstenite = "0.17.1"
url = "2.2.2"