[package]
name = "husky"
version = "0.2.0-beta.1"
authors = ["Lester Covey <me@lestercovey.ml>"]
repository = "https://github.com/lesterrry/husky"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.17"
crossterm = "0.22"
unicode-width = "0.1.9"
base64 = "0.13.0"
chrono = "0.4.19"
reqwest = { version = "0.11.10" }
tokio = { version = "1.17.0", features = ["full"] }
tokio-tungstenite = { version = "0.17.1" }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
url = "2.2.2"
cocoon = "0.2.4"
rand = "0.8.5"